# fastapi-async-mysql

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi_async_mysql/: main.py
k8s/: .env.example  fastapi.yml  gateway.yml  kustomization.yml  mysql.yml
k8s/faults/: delay.yml
